[gd_scene load_steps=4 format=3 uid="uid://cxnpx7rgdpnwd"]

[ext_resource type="Script" path="res://field_manager.gd" id="1_u4yeu"]
[ext_resource type="PackedScene" uid="uid://dgf1m1aslr6y0" path="res://point_counter.tscn" id="3_2bioy"]
[ext_resource type="Texture2D" uid="uid://7a4byhmmiraq" path="res://art/dice1.png" id="3_p02oy"]

[node name="FieldManager" type="ColorRect"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.964706, 0.258824, 1, 1)
script = ExtResource("1_u4yeu")

[node name="PointCounter" parent="." instance=ExtResource("3_2bioy")]
layout_mode = 1
offset_bottom = 0.0

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467
anchor_top = 0.9
anchor_right = 0.533
anchor_bottom = 1.0
offset_left = -0.160004
offset_right = 0.159973
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("3_p02oy")
texture_pressed = ExtResource("3_p02oy")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
